app/assets/stylesheets/devise.scss
/**
Sign Up:
        36px, medium
Labels:
        20px
Inputs:
        width: 385px, height: 40px, border-bottom: 1px purple, background color: white
Join btn:
        width: 300px, border-radius 28
Join:
        30px, white, bold
*/


@import "colors";

.devise-background {
	background-image: url("signup_background.png");
	background-size: 100% 100%;
	background-repeat: no-repeat;
	height: 100%;
}

.devise-h1 {
	font-size: 36px;
	font-weight: medium;
	color: $pink;
	margin-bottom: 20px;
}

.devise-field {
	label {
		font-size: 20px;
		color: $purple;
		margin-bottom: 0px;
	}

	input {
		width: 385px;
		height: 40px;
		border-style: none;
		border-bottom: 1px solid $purple;
		background-color: $off-white;
	}
}

.devise-button {
	width: 100%;
	margin-top: 50px;
	input {
		width: 300px;
		margin: 0px auto;
		border-radius: 28px;
		background: $pink;
		text-align: center;
		vertical-align: middle;
		font-size: 30px;
		font-weight: bold;
		border: none;
		color: white;
	}
}

/**
.form-label {
	font-size: 20px;
	color: $purple;
}

.form-inputs {

}
*/

